@@ -1,0 +1,50 @@
+{
+	"textures": {
+		"all": "minecraft:blocks/iron_block"
+	},
+	"elements": [
+		{
+			"from": [ 0, 0, 4 ],
+			"to": [ 2, 6, 8 ],
+			"faces": {
+				"down": { "uv": [ 1, 1, 3, 5 ], "texture": "#all", "cullface": "down" },
+				"north": { "uv": [ 1, 0, 3, 6 ], "texture": "#all" },
+				"south": { "uv": [ 1, 0, 3, 6 ], "texture": "#all" },
+				"west": { "uv": [ 1, 0, 5, 6 ], "texture": "#all", "cullface": "west" },
+				"east": { "uv": [ 1, 0, 5, 6 ], "texture": "#all" }
+			}
+		},
+		{
+			"from": [ 14, 0, 4 ],
+			"to": [ 16, 6, 8 ],
+			"faces": {
+				"down": { "uv": [ 1, 1, 3, 5 ], "texture": "#all", "cullface": "down" },
+				"north": { "uv": [ 1, 0, 3, 6 ], "texture": "#all" },
+				"south": { "uv": [ 1, 0, 3, 6 ], "texture": "#all" },
+				"west": { "uv": [ 1, 0, 5, 6 ], "texture": "#all", "cullface": "west" },
+				"east": { "uv": [ 1, 0, 5, 6 ], "texture": "#all" }
+			}
+		},
+		{
+			"from": [ 2, 4, 4 ],
+			"to": [ 14, 5, 8 ],
+			"faces": {
+				"up": { "uv": [ 1, 8, 15, 12 ], "texture": "#all" },
+				"down": { "uv": [ 1, 8, 15, 12 ], "texture": "#all" },
+				"north": { "uv": [ 1, 4, 15, 5 ], "texture": "#all" },
+				"south": { "uv": [ 1, 4, 15, 5 ], "texture": "#all" }
+			}
+		},
+		{
+			"from": [ 0, 6, 0 ],
+			"to": [ 16, 8, 8 ],
+			"faces": {
+				"up": { "uv": [ 0, 8, 16, 16 ], "texture": "#all" },
+				"down": { "uv": [ 0, 0, 16, 8 ], "texture": "#all" },
+				"south": { "uv": [ 0, 1, 16, 3 ], "texture": "#all" },
+				"west": { "uv": [ 8, 1, 16, 3 ], "texture": "#all" },
+				"east": { "uv": [ 0, 1, 8, 3 ], "texture": "#all" }
+			}
+		}
+	]
+}
