@@ -1,0 +1,135 @@
+{
+	"textures": {
+		"all": "minecraft:blocks/iron_block"
+	},
+	"elements": [
+		{
+			"from": [2, 0, 4],
+			"to": [4, 14, 5],
+			"faces": {
+				"down": { "uv": [ 1, 1, 3, 5 ], "texture": "#all", "cullface": "down" },
+				"north": { "uv": [ 1, 2, 3, 10 ], "texture": "#all" },
+				"south": { "uv": [ 1, 2, 3, 10 ], "texture": "#all" },
+				"west": { "uv": [ 1, 2, 5, 10 ], "texture": "#all", "cullface": "west" },
+				"east": { "uv": [ 1, 2, 5, 10 ], "texture": "#all" }
+			}
+		},
+		{
+			"from": [12, 0, 4],
+			"to": [14, 14, 5],
+			"faces": {
+				"down": { "uv": [ 1, 1, 3, 5 ], "texture": "#all", "cullface": "down" },
+				"north": { "uv": [ 1, 2, 3, 10 ], "texture": "#all" },
+				"south": { "uv": [ 1, 2, 3, 10 ], "texture": "#all" },
+				"west": { "uv": [ 1, 2, 5, 10 ], "texture": "#all", "cullface": "west" },
+				"east": { "uv": [ 1, 2, 5, 10 ], "texture": "#all" }
+			}
+		},
+		{
+			"from": [2, 0, 11],
+			"to": [4, 14, 12],
+			"faces": {
+				"down": { "uv": [ 1, 1, 3, 5 ], "texture": "#all", "cullface": "down" },
+				"north": { "uv": [ 1, 2, 3, 10 ], "texture": "#all" },
+				"south": { "uv": [ 1, 2, 3, 10 ], "texture": "#all" },
+				"west": { "uv": [ 1, 2, 5, 10 ], "texture": "#all", "cullface": "west" },
+				"east": { "uv": [ 1, 2, 5, 10 ], "texture": "#all" }
+			}
+		},
+		{
+			"from": [12, 0, 11],
+			"to": [14, 14, 12],
+			"faces": {
+				"down": { "uv": [ 1, 1, 3, 5 ], "texture": "#all", "cullface": "down" },
+				"north": { "uv": [ 1, 2, 3, 10 ], "texture": "#all" },
+				"south": { "uv": [ 1, 2, 3, 10 ], "texture": "#all" },
+				"west": { "uv": [ 1, 2, 5, 10 ], "texture": "#all", "cullface": "west" },
+				"east": { "uv": [ 1, 2, 5, 10 ], "texture": "#all" }
+			}
+		},
+		{
+			"from": [2, 14, 4],
+			"to": [14, 16, 12],
+			"faces": {
+				"up": { "uv": [ 0, 8, 16, 16 ], "texture": "#all" },
+				"down": { "uv": [ 0, 0, 16, 8 ], "texture": "#all" },
+				"north": { "uv": [ 0, 1, 16, 3 ], "texture": "#all" },
+				"south": { "uv": [ 0, 1, 16, 3 ], "texture": "#all" },
+				"west": { "uv": [ 8, 1, 16, 3 ], "texture": "#all" },
+				"east": { "uv": [ 0, 1, 8, 3 ], "texture": "#all" }
+			}
+		},
+		{
+			"from": [2, 2, 5],
+			"to": [4, 3, 11],
+			"faces": {
+				"up": { "uv": [ 1, 8, 15, 12 ], "texture": "#all" },
+				"down": { "uv": [ 1, 8, 15, 12 ], "texture": "#all" },
+				"west": { "uv": [ 1, 4, 15, 5 ], "texture": "#all" },
+				"east": { "uv": [ 1, 4, 15, 5 ], "texture": "#all" }
+			}
+		},
+		{
+			"from": [2, 6, 5],
+			"to": [4, 7, 11],
+			"faces": {
+				"up": { "uv": [ 1, 8, 15, 12 ], "texture": "#all" },
+				"down": { "uv": [ 1, 8, 15, 12 ], "texture": "#all" },
+				"west": { "uv": [ 1, 4, 15, 5 ], "texture": "#all" },
+				"east": { "uv": [ 1, 4, 15, 5 ], "texture": "#all" }
+			}
+		},
+		{
+			"from": [2, 10, 5],
+			"to": [4, 11, 11],
+			"faces": {
+				"up": { "uv": [ 1, 8, 15, 12 ], "texture": "#all" },
+				"down": { "uv": [ 1, 8, 15, 12 ], "texture": "#all" },
+				"west": { "uv": [ 1, 4, 15, 5 ], "texture": "#all" },
+				"east": { "uv": [ 1, 4, 15, 5 ], "texture": "#all" }
+			}
+		},
+		{
+			"from": [12, 2, 5],
+			"to": [14, 3, 11],
+			"faces": {
+				"up": { "uv": [ 1, 8, 15, 12 ], "texture": "#all" },
+				"down": { "uv": [ 1, 8, 15, 12 ], "texture": "#all" },
+				"west": { "uv": [ 1, 4, 15, 5 ], "texture": "#all" },
+				"east": { "uv": [ 1, 4, 15, 5 ], "texture": "#all" }
+			}
+		},
+		{
+			"from": [12, 6, 5],
+			"to": [14, 7, 11],
+			"faces": {
+				"up": { "uv": [ 1, 8, 15, 12 ], "texture": "#all" },
+				"down": { "uv": [ 1, 8, 15, 12 ], "texture": "#all" },
+				"west": { "uv": [ 1, 4, 15, 5 ], "texture": "#all" },
+				"east": { "uv": [ 1, 4, 15, 5 ], "texture": "#all" }
+			}
+		},
+		{
+			"from": [12, 10, 5],
+			"to": [14, 11, 11],
+			"faces": {
+				"up": { "uv": [ 1, 8, 15, 12 ], "texture": "#all" },
+				"down": { "uv": [ 1, 8, 15, 12 ], "texture": "#all" },
+				"west": { "uv": [ 1, 4, 15, 5 ], "texture": "#all" },
+				"east": { "uv": [ 1, 4, 15, 5 ], "texture": "#all" }
+			}
+		}
+	],
+	"display": {
+		"thirdperson": {
+			"rotation": [0, 90, -90],
+			"translation": [0, 1, -3],
+			"scale": [0.55, 0.55, 0.55]
+		},
+		"firstperson": {
+			"rotation": [0, -135, 0],
+			"translation": [-3, 3, 2],
+			"scale": [1.3, 1.3, 1.3]
+		}
+	}
+}
